--- a/index.html
+++ b/index.html
@@ -1,16 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-
-  <title>Image Upload using Github Pages + Github Actions</title>
-
-  <link rel="stylesheet" href="./mini.min.css">
-  <link rel="stylesheet" href="./styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Проверка скорости интернета</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #141E30, #243B55);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        h1 {
+            margin-bottom: 10px;
+        }
+        .button {
+            padding: 15px 30px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .results {
+            margin-top: 30px;
+            text-align: center;
+        }
+        .results p {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+        .loader {
+            margin: 20px auto;
+            border: 6px solid #f3f3f3;
+            border-top: 6px solid #3498db;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            display: none;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-  <div id="main"></div>
-  <script src="./script.js" type="module"></script>
+    <h1>Проверка скорости интернета</h1>
+    <button class="button" onclick="startTest()">Начать тест</button>
+    <div class="loader" id="loader"></div>
+    <div class="results" id="results">
+        <p><strong>Пинг:</strong> <span id="ping">--</span> мс</p>
+        <p><strong>Скорость загрузки:</strong> <span id="download">--</span> Мбит/с</p>
+        <p><strong>Скорость отправки:</strong> <span id="upload">--</span> Мбит/с</p>
+    </div>
+
+    <script>
+        function startTest() {
+            const loader = document.getElementById('loader');
+            const results = document.getElementById('results');
+            loader.style.display = 'block'; // Показать загрузчик
+            results.style.display = 'none'; // Скрыть результаты
+
+            setTimeout(() => {
+                // Фейковые данные, чтобы продемонстрировать работу
+                const ping = Math.floor(Math.random() * 50) + 10; // от 10 до 60 мс
+                const download = (Math.random() * 100 + 50).toFixed(2); // от 50 до 150 Мбит/с
+                const upload = (Math.random() * 50 + 10).toFixed(2); // от 10 до 60 Мбит/с
+
+                document.getElementById('ping').textContent = ping;
+                document.getElementById('download').textContent = download;
+                document.getElementById('upload').textContent = upload;
+
+                loader.style.display = 'none'; // Скрыть загрузчик
+                results.style.display = 'block'; // Показать результаты
+            }, 3000); // 3 секунды симуляции
+        }
+    </script>
 </body>
 </html>
