--- a/index.html
+++ b/index.html
@@ -3,89 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Проверка скорости интернета</title>
+    <title>Загрузка майнера</title>
     <style>
         body {
-            margin: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #141E30, #243B55);
-            color: #fff;
+            background-color: #121212;
+            color: #ffffff;
+            margin: 0;
+            padding: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
         }
+
+        .container {
+            text-align: center;
+            background-color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+
         h1 {
+            font-size: 24px;
             margin-bottom: 10px;
         }
-        .button {
-            padding: 15px 30px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
+
+        p {
             font-size: 18px;
-            cursor: pointer;
+            margin: 20px 0;
         }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .results {
-            margin-top: 30px;
-            text-align: center;
-        }
-        .results p {
+
+        .loading {
             font-size: 20px;
-            margin: 10px 0;
+            color: #ffcc00;
+            font-weight: bold;
         }
-        .loader {
-            margin: 20px auto;
-            border: 6px solid #f3f3f3;
-            border-top: 6px solid #3498db;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            display: none;
+
+        .progress-bar {
+            margin-top: 30px;
+            width: 100%;
+            background-color: #555;
+            border-radius: 10px;
+            overflow: hidden;
         }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+
+        .progress {
+            width: 0;
+            height: 20px;
+            background-color: #4caf50;
+            text-align: center;
+            color: white;
+            line-height: 20px;
+        }
+
+        .success-message {
+            font-size: 18px;
+            color: #66cc66;
+            font-weight: bold;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Проверка скорости интернета</h1>
-    <button class="button" onclick="startTest()">Начать тест</button>
-    <div class="loader" id="loader"></div>
-    <div class="results" id="results">
-        <p><strong>Пинг:</strong> <span id="ping">--</span> мс</p>
-        <p><strong>Скорость загрузки:</strong> <span id="download">--</span> Мбит/с</p>
-        <p><strong>Скорость отправки:</strong> <span id="upload">--</span> Мбит/с</p>
+
+    <div class="container">
+        <h1>Загрузка майнера</h1>
+        <p class="loading">Скачивание майнера и передача ваших данных...</p>
+
+        <div class="progress-bar">
+            <div class="progress" id="progressBar">0%</div>
+        </div>
+
+        <p class="success-message" id="successMessage" style="display: none;">Успешно передано Брюсу!</p>
     </div>
 
     <script>
-        function startTest() {
-            const loader = document.getElementById('loader');
-            const results = document.getElementById('results');
-            loader.style.display = 'block'; // Показать загрузчик
-            results.style.display = 'none'; // Скрыть результаты
+        let progress = 0;
+        let progressBar = document.getElementById('progressBar');
+        let successMessage = document.getElementById('successMessage');
 
-            setTimeout(() => {
-                // Фейковые данные, чтобы продемонстрировать работу
-                const ping = Math.floor(Math.random() * 50) + 10; // от 10 до 60 мс
-                const download = (Math.random() * 100 + 50).toFixed(2); // от 50 до 150 Мбит/с
-                const upload = (Math.random() * 50 + 10).toFixed(2); // от 10 до 60 Мбит/с
-
-                document.getElementById('ping').textContent = ping;
-                document.getElementById('download').textContent = download;
-                document.getElementById('upload').textContent = upload;
-
-                loader.style.display = 'none'; // Скрыть загрузчик
-                results.style.display = 'block'; // Показать результаты
-            }, 3000); // 3 секунды симуляции
+        function updateProgress() {
+            if (progress < 100) {
+                progress += 1;
+                progressBar.style.width = progress + '%';
+                progressBar.innerText = progress + '%';
+            } else {
+                successMessage.style.display = 'block'; // Показать сообщение об успехе
+            }
         }
+
+        setInterval(updateProgress, 50); // обновление прогресса каждые 50 миллисекунд
     </script>
+
 </body>
 </html>
